--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "hardhat": "^2.12.0"
+  },
+  "dependencies": {
+    "solc": "^0.8.17"
   }
 }
